--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,42 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
+body {
+  margin: auto;
+  width: 50%;
+  background-color: #DEEBF1;
+  font-family: Georgia, sans-serif;
+  color: #3284AB
+}
+
+p {
+  font-size: 24px;
+}
+
+h1 {
+  color: #4C7588
+}
+
+button {
+  background-color: #388BB2;
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+input[type=submit] {
+  background-color: #388BB2;
+  border: none;
+  color: white;
+  text-align: center;
+  border-radius: 4px;
+}
+
 
 .answer-box {
   display: none;
